<resources>
    <string name="app_name">Mathematical Thinking</string>
    <string name="main_menu_articles">Articles</string>
    <string name="main_menu_tests">Tests</string>
    <string name="main_menu_tasks">Tasks</string>
    <string name="main_menu_settings">Settings</string>
    <string name="tasks_search_hint">Search task</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="test">Test</string>
    <string name="tests">Tests</string>
    <string name="tasks">Tasks</string>
    <string name="task">Task</string>
    <string name="articles">Articles</string>
    <string name="right">right</string>
    <string name="wrong">wrong</string>
    <string name="tasks_number">tasks</string>
    <string name="zero">0</string>
    <string name="choose_language">Choose language…</string>
    <string name="english" translatable="false">English</string>
    <string name="georgian" translatable="false">ქართული</string>
    <string name="hint">Hint</string>
    <string name="answer">Answer</string>
    <string name="rate_app">Rate app</string>
    <string name="super_category_title" translatable="false">%d. %s</string>
    <string name="category_title" translatable="false">%d.%d %s</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="sort_by">Sort by: </string>
    <string-array name="sort_by_parameters">
        <item>Creation time</item>
        <item>Update time</item>
        <item>Alphabetically</item>
    </string-array>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="options">With options</string>
    <string name="both">Both</string>
    <string name="direct_answer">Direct answer</string>
    <string name="solved">Solved</string>
    <string name="unsolved">Unsolved</string>
    <string name="task_filter_sort">Tasks Sort/Filter</string>
    <string name="test_filter_sort">Tests Sort/Filter</string>
    <string name="solved_task_test" translatable="false">%s&#160;&#160;✔</string>
    <string name="main_menu_progress">Progress</string>
    <string name="progress_tasks_solved">Tasks solved: %d/%d</string>
    <string name="progress_tests_solved">Tests solved: %d/%d</string>
    <string name="progress_level">Level: %d</string>
    <string name="music">Music</string>
    <string name="music_is_on">Music is on</string>
    <string name="music_is_off">Music is off</string>
    <string name="about_app">About app</string>
    <string name="about_content">This app helps people develop mathematical thinking. It consists of very interesting, beautiful and fun parts of math. The knowledge and thinking style, you study here, will help you solve the problems, you might meet in life.</string>
    <string name="reached_level">You\'ve reached level %d!</string>
    <string name="close">close</string>
    <string name="article">article</string>
    <string name="show_hint">Show hint</string>
    <string name="show_answer">Show answer</string>
    <string name="open_article">Open article</string>
    <string name="open_test">Open test</string>
    <string name="solve_information">Task is marked, if you answer correctly. Test is marked, if you answer all of the tasks in it correctly. You can see hint and solution if you open task, but you can\'t if you open test.</string>
    <string name="show">Show:</string>
    <string name="any_category">Any subcategory</string>
    <string name="any_super_category">Any supercategory</string>

</resources>