<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tmand13.math_thinking.TaskFilterSortActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_by"/>

            <Spinner
                android:id="@+id/sort_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:dropDownWidth="wrap_content"
                android:minWidth="2000dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show"/>

            <Spinner
                android:id="@+id/filter_super_category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:dropDownWidth="wrap_content"
                android:minWidth="2000dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show"/>

            <Spinner
                android:id="@+id/filter_category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:dropDownWidth="wrap_content"
                android:minWidth="2000dp" />

        </LinearLayout>

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/answer_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textToggleLeft="@string/options"
            app:textToggleCenter="@string/both"
            app:textToggleRight="@string/direct_answer"
            app:uncheckedTextColor="@color/colorWhite"
            app:uncheckedBackgroundColor="@color/gray_light"
            app:checkedTextColor="@color/colorWhite"
            app:checkedBackgroundColor="@color/colorYellow"
            app:separatorColor="@color/colorWhite"
            android:textSize="8sp"
            android:layout_margin="10dp" />

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/solve_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textToggleLeft="@string/unsolved"
            app:textToggleCenter="@string/both"
            app:textToggleRight="@string/solved"
            app:uncheckedTextColor="@color/colorWhite"
            app:uncheckedBackgroundColor="@color/gray_light"
            app:checkedTextColor="@color/colorWhite"
            app:checkedBackgroundColor="@color/colorYellow"
            app:separatorColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:layout_margin="10dp"
                android:background="@color/colorYellow"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply"
                android:layout_margin="10dp"
                android:background="@color/colorYellow"
                android:textColor="@color/colorWhite" />

        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>