<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tmand13.math_thinking.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/language_button"
            android:background="@color/colorYellow"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/language"
            android:padding="4dp"/>

        <Switch
            android:id="@+id/music_switch"
            android:background="@color/colorYellow"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:padding="4dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/rate_button"
            android:background="@color/colorYellow"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rate_app"
            android:padding="4dp"
            android:singleLine="true"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
